hphp/hack/test/typecheck/unsafe_bound.php.like_types.exp
File "unsafe_bound.php", line 18, characters 31-32:
Invalid assignment (Typing[4110])
File "unsafe_bound.php", line 18, characters 13-29:
Expected (function(T): Tv)
File "unsafe_bound.php", line 18, characters 13-29:
But got dynamic because it is an unenforceable type
